<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">快密</string>
    <string name="cancel">Cancel</string>
    <string name="encrypt">加密</string>
    <string name="encrypting">Encrypting</string>
    <string name="confirm_password">再次输入密码</string>
    <string name="password">输入密码</string>
    <string name="decrypt">解密</string>
    <string name="decrypting">Decrypting</string>
    <string name="done">Done</string>
    <string name="operation_in_progress">Operation in progress</string>
    <string name="home">Home</string>
    <string name="show_password">显示密码</string>

    <string name="action_settings">设置</string>
    <string name="no_input_file_selected">未选择输入文件</string>
    <string name="error_could_not_get_input_file">Error: Could not get input file</string>
    <string name="error_could_not_close_input_file">Error: Could not close input file</string>
    <string name="error_platform_does_not_support_the_required_cryptographic_methods">Error: Platform does not support the required cryptographic methods</string>
    <string name="error_utf16_encoding_is_not_supported">Error: UTF-16 encoding is not supported</string>
    <string name="error_could_not_close_output_file">Error: Could not close output file</string>
    <string name="no_output_file_selected">No output file selected</string>
    <string name="select_output_file">选择输出文件</string>
    <string name="select_input_file">选择输入文件</string>
    <string name="input_file">Input File</string>
    <string name="output_file">Output File</string>
    <string name="passwords_do_not_match">两次密码不相同</string>
    <string name="the_input_and_output_files_must_be_different">输入文件和输出文件必须不同</string>
    <string name="contact_info">快密Quickme基于RSA算法对AES密钥进行非对称加密，双方通过第三方通讯软件传递公钥和密文交换AES密钥，使用密钥加密文件，将加密文件通过第三方通讯软件发送给对方，使用密钥解密得到原始文件。如发现漏洞请及时联系我们 <b>allpick@qq.com</b></string>
    <string name="version">v1.2</string>
    <string name="action_about">关于</string>
    <string name="icon_made_by">Application made by</string>
    <string name="from">使用说明</string>
    <string name="flaticon_link"><u>https://www.flaticon.com/</u></string>
    <string name="lock_unlock_icon_creator_name">SimpleIcon</string>
    <string name="lock_unlock_icon_creator_link">https://www.flaticon.com/authors/simpleicon</string>
    <string name="flaticon_displayed_link"><u>www.flaticon.com</u></string>
    <string name="cc30_license_name"><u>CC 3.0 BY</u></string>
    <string name="licensed_by">项目开源</string>
    <string name="cc30_link">https://creativecommons.org/licenses/by/3.0/</string>
    <string name="icons">快密Quickme</string>
    <string name="error_null_password">Error: null password</string>
    <string name="version_1_radio_button_text">AESCrypt version 1 (不推荐,不再更新)</string>
    <string name="version_2_radio_button_text">AESCrypt version 2 (推荐)</string>
    <string name="aescrypt_version">AESCrypt Version</string>
    <string name="another_operation_is_already_in_progress">Another operation is already in progress</string>
    <string name="encryption_completed">Encryption completed</string>
    <string name="decryption_completed">Decryption completed</string>
    <string name="encryption_canceled">Encryption canceled</string>
    <string name="decryption_canceled">Decryption canceled</string>
    <string name="file_search_icon_creator_name">Freepik</string>
    <string name="file_search_icon_creator_link">http://www.freepik.com</string>
    <string name="launcher_icon_creator_link">http://www.zsuuu.com/?p=1258</string>
    <string name="launcher_icon_creator_name">ZSUUU</string>
    <string name="freeware_license_name">快密Quickme</string>
    <string name="freeware_license_link">http://www.zsuuu.com/?p=1258</string>
    <string name="iconarchive_name">使用说明</string>
    <string name="iconarchive_link">http://www.zsuuu.com/?p=1305</string>
    <string name="ok">Ok</string>
    <string name="refresh">Refresh</string>
    <string name="file_picker_display">File Picker Display</string>
    <string name="list">List</string>
    <string name="home_icon_creator_name">Lyolya</string>
    <string name="home_icon_creator_link">https://www.flaticon.com/authors/lyolya</string>
    <string name="refresh_icon_creator_link">https://www.flaticon.com/authors/gregor-cresnar</string>
    <string name="refresh_icon_creator_name">Gregor Cresnar</string>
    <string name="folder_icon_creator_link">https://www.flaticon.com/authors/madebyoliver</string>
    <string name="folder_icon_creator_name">Madebyoliver</string>
    <string name="file_icon_creator_link">https://www.flaticon.com/authors/madebyoliver</string>
    <string name="file_icon_creator_name">Madebyoliver</string>
    <string name="choose_input_file">选择输入文件</string>
    <string name="choose_output_file">选择输出文件</string>
    <string name="file_is_a_directory">文件是目录</string>
    <string name="filename_cannot_be_empty">文件名不能为空</string>
    <string name="filename">Filename</string>
    <string name="sdcard_location">SD Card Location</string>
    <string name="edit">Edit</string>
    <string name="not_set">Not set</string>
    <string name="set">set</string>
    <string name="sdcard_icon_creator_link">https://www.flaticon.com/authors/smartline</string>
    <string name="sdcard_icon_creator_name">Smartline</string>
    <string name="sdcard">SD Card</string>
    <string name="how_to_locate_sdcard">To grant SD card access to AndroidCrypt, select the root directory of your SD Card on the following screen. This can be changed at any time in settings.</string>
    <string name="did_not_get_sdcard_access">Did not get SD card access</string>
    <string name="file_write_access_denied">File write access denied</string>
    <string name="file_not_found">File not found</string>
    <string name="write_permission_denied_if_sdcard_grant_permission_in_settings">Write permission denied. If outputting to SD card you need to grant permission to it in settings.</string>
    <string name="delete_input_file">删除输入文件</string>
    <string name = "spanish_translation_credit">感谢为快密Quickme做出贡献的人们</string>
    <string name="sdcard_error">SD Card Error</string>
    <string name="could_not_read_sdcard">Could not read SD card.</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
</resources>
