<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/encryptModeButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/operation_mode_button_selector"
                android:gravity="end|center_vertical"
                android:paddingEnd="8dp"
                android:text="@string/encrypt"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/decryptModeButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/operation_mode_button_selector"
                android:gravity="start|center_vertical"
                android:paddingStart="8dp"
                android:text="@string/decrypt"
                android:textColor="#FFF" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/inputFilePathLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.zsuuu.quickmeapp.FileSelectButton
                android:id="@+id/selectInputFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minimized="false"
                app:output_button="false" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputFilePathTextView"
                    style="@style/FilePathTextView" />
            </HorizontalScrollView>
        </LinearLayout>
        <View
            android:id="@+id/inputFilePathUnderlineView"
            style="@style/FilePathUnderlineView"/>

        <CheckBox
            android:id="@+id/deleteInputFileCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/delete_input_file" />

        <LinearLayout
            android:id="@+id/outputFilePathLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.zsuuu.quickmeapp.FileSelectButton
                android:id="@+id/selectOutputFileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minimized="false"
                app:output_button="true" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/outputFilePathTextView"
                    style="@style/FilePathTextView" />
            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:id="@+id/outputFilePathUnderlineView"
            style="@style/FilePathUnderlineView"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/PasswordEditText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:hint="@string/confirm_password"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/PasswordEditText"
            android:hint="@string/password" />



        <CheckBox
            android:id="@+id/showPasswordCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/show_password" />

        <LinearLayout
            android:id="@+id/progressDisplayLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/progressDisplayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressDisplayProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false" />

            <LinearLayout
                android:id="@+id/progressDisplayCancelButtonLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/ic_cancel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--以下是修改的代码，加入非对称加密RSA，传递生成的固定密钥-->

            <Button
                android:id="@+id/qingchuotherN"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:text="清除"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/otherN"
                style="@style/PasswordEditText"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:hint="请输入对方公钥"
                app:layout_constraintStart_toEndOf="@+id/qingchuotherN"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/qingchuothermiwen"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:text="清除"
                app:layout_constraintTop_toBottomOf="@+id/qingchuotherN"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/othermiwen"
                style="@style/PasswordEditText"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:hint="请输入对方密文"
                app:layout_constraintStart_toEndOf="@+id/qingchuothermiwen"
                app:layout_constraintTop_toBottomOf="@+id/otherN" />

            <Button
                android:id="@+id/shengchengmiyao"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="生成密钥"
                app:layout_constraintTop_toBottomOf="@+id/othermiwen"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/fuzhie"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="复制公钥"
                app:layout_constraintTop_toBottomOf="@+id/shengchengmiyao"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/shengchengaeskey"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="生成AES密文"
                app:layout_constraintStart_toEndOf="@+id/shengchengmiyao"
                app:layout_constraintTop_toBottomOf="@+id/othermiwen" />

            <Button
                android:id="@+id/jiemiaeskey"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="解密AESKey"
                app:layout_constraintStart_toEndOf="@+id/shengchengaeskey"
                app:layout_constraintTop_toBottomOf="@+id/othermiwen" />

            <Button
                android:id="@+id/fuzhiaesmima"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="复制AESKey"
                app:layout_constraintStart_toEndOf="@+id/fuzhiaeskey"
                app:layout_constraintTop_toBottomOf="@+id/jiemiaeskey" />

            <Button
                android:id="@+id/fuzhiaeskey"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="复制AES密文"
                app:layout_constraintStart_toEndOf="@+id/fuzhie"
                app:layout_constraintTop_toBottomOf="@+id/shengchengaeskey" />
            <!--以上是修改的代码，加入非对称加密RSA，传递生成的固定密钥-->
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/aboutkeye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/aboutkeyd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aboutkeye"
                tools:layout_editor_absoluteX="167dp" />

            <TextView
                android:id="@+id/aboutkeyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aboutkeyd"
                tools:layout_editor_absoluteX="206dp" />

            <TextView
                android:id="@+id/aboutkeyaes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aboutkeyn"
                tools:layout_editor_absoluteX="206dp" />

            <TextView
                android:id="@+id/aboutaeskey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aboutkeyaes"
                tools:layout_editor_absoluteX="206dp" />

            <TextView
                android:id="@+id/jiemiaesmima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="206dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutaeskey"
                tools:layout_editor_absoluteY="98dp" />

            <!--以上是修改的代码，加入非对称加密RSA，传递生成的固定密钥-->
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>